--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4   92.766723  -8141.329800  161980.127527       153838.797727  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -368,12 +368,12 @@
     "\n",
     "\n",
     "filename = os.path.join(RESULTS_YEAR_DIR, \"sizing.png\")\n",
-    "grid.savefig(filename, dpi=900, bbox_inches='tight')"
+    "fig.savefig(filename, dpi=900, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
     "print(\"Slope:\", slope)\n",
     "# y = 262.784-1.3452*x\n",
     "# co2 = 262.74-1.342*ln(cost)\n",
-    "fit = {\"x\": np.linspace(1,180,200),\n",
+    "fit = {\"x\": np.linspace(0,180,200),\n",
     "       \"y\": [intercept +slope*log(x) for x in np.linspace(1,180,200)]}\n",
     "df_fit=pd.DataFrame.from_dict(fit)\n",
     "sns.lineplot(data=df_fit, x=\"x\", y=\"y\", ax=ax, linestyle=\"--\", color = \"g\")\n",
